--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -3,6 +3,13 @@
 		<title>The Gossip Project</title>
 	</head>
 	<body>
+
+		<% if notice != nil  %>
+		   	<div class="alert alert-success" role="alert">
+		   	<p id="notice"><%= notice %></p>
+		   	</div>
+		 <% end %>  	
+			
 		<h1>Bienvenue sur super Gossip</h1>
 		<a href="/gossips/new" class="btn btn-success">New Gossip</a>
 		<table class="table">
