--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -19,3 +19,7 @@
   Son e-mail: <%=@user.email%>
 </div>
 
+<div class="alert alert-info" role="alert">
+  Le nom de sa ville: <%=@city.name%>
+</div>
+
