--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -1,25 +1,21 @@
-
+<nav class="navbar navbar-dark btn-dark">
+	<h1><a href="/">Super Gossip</a></h1>
+</nav>
 <div class="alert alert-primary" role="alert">
-  Son Prénoms: <%=@user.first_name%>
+	Son Prénoms: <%=@user.first_name%>
 </div>
-
 <div class="alert alert-secondary" role="alert">
-  Son Nom: <%=@user.last_name%>
+	Son Nom: <%=@user.last_name%>
 </div>
-
 <div class="alert alert-light" role="alert">
-  Sa decription: <%=@user.description%>
+	Sa decription: <%=@user.description%>
 </div>
-
 <div class="alert alert-warning" role="alert">
-  Son age: <%=@user.age%>
+	Son age: <%=@user.age%>
 </div>
-
 <div class="alert alert-success" role="alert">
-  Son e-mail: <%=@user.email%>
+	Son e-mail: <%=@user.email%>
 </div>
-
 <div class="alert alert-info" role="alert">
-  Le nom de sa ville: <%=@city.name%>
+Le nom de sa ville: <h5><a href="/city/<%=@user.city_id%>"><%=@city.name%></a></h6>
 </div>
-
