--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -8,7 +8,11 @@
 			<p id="notice"><%= notice %></p>
 		</div>
 		<% end %>
-		
+		<% if alert != nil  %>
+		<div class="alert alert-success" role="alert">
+			<p id="alert"><%= alert %></p>
+		</div>
+		<% end %>	
 		<h1>Bienvenue sur super Gossip</h1>
 		<a href="/gossips/new" class="btn btn-success">New Gossip</a>
 		<table class="table">
