--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,36 +1,37 @@
 <html>
   <body>
     <!-- ... -->
-<% if @gossip %>
-  <% if @gossip.errors.any? %>
-	   <div class="alert alert-danger" role="alert">
-	   <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>
-	  
-	  	<ul>
-	    <% @gossip.errors.full_messages.each do |message| %>
-	      <li><%= message %></li>
-	    <% end %>
-	  </ul>
-	<% end %>
-	</div>
-<% end %>  
-
-    <%= form_tag url_for(action: 'create'), method: "post" do %>
-
-      <%= label_tag 'Title' %>
-      <%= text_field_tag 'title' %>
-      <br /> <br />
-
-      <%= label_tag 'Content' %>
-      <%= text_area_tag 'content' %>
-      <br /> <br />
-
-
-      <%= submit_tag  "Create gossip" %> 
-
-
+    <nav class="navbar navbar-dark btn-dark">
+      <h1><a href="/">Super Gossip</a></h1>
+    </nav>
+    <% if @gossip %>
+    <% if @gossip.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>
+      
+      <ul>
+        <% @gossip.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+      <% end %>
+    </div>
     <% end %>
-
+    <center>
+    <div class="card" style="width: 40rem;">
+      <div class="card-body">
+        <%= form_tag url_for(action: 'create'), method: "post" do %>
+        <%= label_tag 'Title' %>
+        <%= text_field_tag'title'  %>
+        <br /> <br />
+        <%= label_tag 'Content' %>
+        <%= text_area_tag'content'  %>
+        <br /> <br />
+        <%= submit_tag  "Create gossip", class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+    </center>
     <!-- ... -->
   </body>
 </html>
