--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -10,6 +10,7 @@
     <p class="text-justify"><%= @gossip.content %></p>
     <h4 class="card-text"> La ville de l'auteur :</h4>
     <h3><a href="/city/<%=@user.city_id%>"><%= @city.name %></a></br></h3>
+    <a href="/gossips/<%=@gossip.id %>/edit" class="btn btn-primary">edit</a>
     <a href="/profil/<%=@gossip.user_id%>" class="btn btn-primary">son profile</a>
   </div>
 </div>
