--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -1,4 +1,6 @@
-<div class="card">
+
+ <%= form_tag url_for(action: 'destroy'), method: "delete" do %>
+ <div class="card">
   <nav class="navbar navbar-dark btn-dark">
     <h1><a href="/">Super Gossip</a></h1>
   </nav>
@@ -10,7 +12,11 @@
     <p class="text-justify"><%= @gossip.content %></p>
     <h4 class="card-text"> La ville de l'auteur :</h4>
     <h3><a href="/city/<%=@user.city_id%>"><%= @city.name %></a></br></h3>
-    <a href="/gossips/<%=@gossip.id %>/edit" class="btn btn-primary">edit</a>
+    <a href="/gossips/<%=@gossip.id %>/edit" class="btn btn-primary">edit
+    </a>
+    
+    <button type="submit" class="btn btn-danger">Delete Gossip</button>
     <a href="/profil/<%=@gossip.user_id%>" class="btn btn-primary">son profile</a>
   </div>
 </div>
+<% end %>
