--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -31,7 +31,7 @@
 				<%= user.first_name %></td>
 				<% usergossip = user.gossips %>
 				<td><% usergossip.each do |gossip| %>
-					<a href="/gossips/<%= gossip.id %>"><%= gossip.title%></a> ;
+					<a href="/gossips/<%= gossip.id %>"><%= gossip.title%></a> ;<span class="text-muted">(<%=gossip.comments.count%>) </span>
 				<%end%></td>
 				
 			</tr>
