--- a/app/views/comment/edit.html.erb
+++ b/app/views/comment/edit.html.erb
@@ -1,12 +1,15 @@
 <html>
   <body>
     <!-- ... -->
-    <nav class="navbar navbar-dark btn-dark">
-      <h1><a href="/">Super Gossip</a></h1>
+    <nav class="navbar navbar-light bg-dark">
+      <a class="navbar-brand text-white" href="/gossips">
+        <img src="https://logopond.com/logos/84580e04dc1d6b8eb99fc18efbbc43f2.png" width="30" height="30" class=" d-inline-block align-top" alt="">
+        Super Gossip
+      </a>
     </nav>
     <% if @comment %>
-      <% if @comment.errors.any? %>
-      <div class="alert alert-danger" role="alert">
+    <% if @comment.errors.any? %>
+    <div class="alert alert-danger" role="alert">
       <p>Nous n'avons pas réussi à éditer le commentaire pour la (ou les) raison(s) suivante(s) :</p>
       
       <ul>
@@ -14,8 +17,8 @@
         <li><%= message %></li>
         <% end %>
       </ul>
-      </div>
-      <% end %>
+    </div>
+    <% end %>
     <% end %>
     <center>
     <div class="card" style="width: 40rem;">
