--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,15 +1,18 @@
 <html>
   <body>
     <!-- ... -->
-    <nav class="navbar navbar-dark btn-dark">
-      <h1><a href="/">Super Gossip</a></h1>
+    <nav class="navbar navbar-light bg-dark">
+      <a class="navbar-brand text-white" href="/gossips">
+        <img src="https://logopond.com/logos/84580e04dc1d6b8eb99fc18efbbc43f2.png" width="30" height="30" class=" d-inline-block align-top" alt="">
+        Super Gossip
+      </a>
     </nav>
     <% if @gossip %>
-      <% if @gossip.errors.any? %>
-        <div class="alert alert-danger" role="alert">
-        <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>
+    <% if @gossip.errors.any? %>
+    <div class="alert alert-danger" role="alert">
+      <p>Nous n'avons pas réussi à créer le potin pour la (ou les) raison(s) suivante(s) :</p>
       
-        <ul>
+      <ul>
         <% @gossip.errors.full_messages.each do |message| %>
         <li><%= message %></li>
         <% end %>
