--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -1,6 +1,10 @@
-<nav class="navbar navbar-dark btn-dark">
-	<h1><a href="/">Super Gossip</a></h1>
+<nav class="navbar navbar-light bg-dark">
+	<a class="navbar-brand text-white" href="/">
+		<img src="https://logopond.com/logos/84580e04dc1d6b8eb99fc18efbbc43f2.png" width="30" height="30" class=" d-inline-block align-top" alt="">
+		Super Gossip
+	</a>
 </nav>
+
 <div class="alert alert-primary" role="alert">
 	Son Prénoms: <%=@user.first_name%>
 </div>
@@ -17,5 +21,5 @@
 	Son e-mail: <%=@user.email%>
 </div>
 <div class="alert alert-info" role="alert">
-Le nom de sa ville: <h5><a href="/city/<%=@user.city_id%>"><%=@city.name%></a></h6>
+	Le nom de sa ville: <h5><a href="/city/<%=@user.city_id%>"><%=@city.name%></a></h6>
 </div>
