--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,30 @@
  *= require_tree .
  *= require_self
  */
+.filtre{
+	position: absolute;
+	width: 1250px;
+	height: 500px;
+
+	background: black;
+
+	z-index: 0;
+
+}
+
+.cover-img{
+	position: absolute;
+	width: 100%;
+	height: 90%;
+	z-index: 1;
+}
+
+.cover-text{
+	position: relative;
+	margin-top: 263px;
+
+	font-size: 80px;
+	color: white; 
+
+	z-index: 2;
+}
