--- a/app/views/accueil/show.html.erb
+++ b/app/views/accueil/show.html.erb
@@ -1,33 +1,1 @@
-<html>
-	<head>
-		<title>The Gossip Project</title>
-	</head>
-	<body>
-		<h1>Bienvenue sur super Gossip</h1>
-		<a href="/gossips/new" class="btn btn-success">New Gossip</a>
-		<table class="table">
-			<thead class="thead-dark">
-				<tr>
-					<th scope="col">id</th>
-					<th scope="col">Author</th>
-					<th scope="col">Gossip</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% i = 1 %>
-				<% @all_users.each do |user| %>
-				<th scope="row"><%= i %></th>
-				<td>
-				<%= user.first_name %></td>
-				<% usergossip = user.gossips %>
-				<td><% usergossip.each do |gossip| %>
-					<a href="/gossips/<%= gossip.id %>"><%= gossip.title%> </a>;<span class="text-muted">(<%=gossip.comments.count%>) </span>
-				<%end%></td>
-				
-			</tr>
-			<% i+= 1%>
-			<% end %>
-		</tbody>
-	</table>
-</body>
-</html>
+<h1>tset</h1>>
