--- a/app/views/profil/show.html.erb
+++ b/app/views/profil/show.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-dark">
-	<a class="navbar-brand text-white" href="/">
+	<a class="navbar-brand text-white" href="/gossips">
 		<img src="https://logopond.com/logos/84580e04dc1d6b8eb99fc18efbbc43f2.png" width="30" height="30" class=" d-inline-block align-top" alt="">
 		Super Gossip
 	</a>
